--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,5 +2,8 @@
   width: 100%;
   height: 70px;
   background-color: indigo;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
 /*# sourceMappingURL=navbar.css.map */
