--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,18 @@
   background-color: salmon;
   position: relative;
   top: 70px;
+  -ms-scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
+  scrollbar-width: none;
+}
+
+.App .sections::-webkit-scrollbar {
+  display: none;
 }
 
 .App .sections > * {
   width: 100vw;
   height: calc(100vh - 70px);
+  scroll-snap-align: start;
 }
 /*# sourceMappingURL=App.css.map */
