--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   background-color: salmon;
   position: relative;
   top: 70px;
+  scroll-behavior: smooth;
   -ms-scroll-snap-type: y mandatory;
       scroll-snap-type: y mandatory;
   scrollbar-width: none;
