--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,7 +1,8 @@
 .navbar {
   width: 100%;
   height: 70px;
-  background-color: indigo;
+  background-color: white;
+  color: indigo;
   position: fixed;
   top: 0;
   z-index: 2;
