--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,7 +1,10 @@
+@import '../../global.scss';
+
 .navbar{
   width: 100%;
   height: 70px;
-  background-color: indigo;
+  background-color: white;
+  color: $mainColor;
   position: fixed;
   top: 0;
   z-index: 2;
