--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -7,4 +7,23 @@
   top: 0;
   z-index: 2;
 }
+
+.navbar .wrapper {
+  padding: 10px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.navbar .wrapper .left .logo {
+  font-size: 40px;
+  font-weight: 700;
+  text-decoration: none;
+}
 /*# sourceMappingURL=navbar.css.map */
