--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -8,4 +8,19 @@
   position: fixed;
   top: 0;
   z-index: 2;
+
+  .wrapper{
+    padding: 10px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .left{
+      .logo{
+        font-size: 40px;
+        font-weight: 700;
+        text-decoration: none;
+      }
+    }
+  }
 }
