--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -26,18 +26,32 @@
         margin-right: 40px;
       }
 
-      .itemContainer{
-        display: flex;
-        align-items: center;
-        margin-left: 30px;
+      // .itemContainer{
+      //   display: flex;
+      //   align-items: center;
+      //   margin-left: 30px;
 
-        .icon{
-          font-size: 18px;
-          margin-right: 5px;
-        }
+      //   .icon{
+      //     font-size: 18px;
+      //     margin-right: 5px;
+      //   }
 
-        span{
-          font-size: 15px;
+      //   span{
+      //     font-size: 15px;
+      //     font-weight: bold;
+      //   }
+      // }
+    }
+
+    .right{
+      .hamburger{
+        text-decoration: none;
+        margin: 5px;
+        font-size: 20px;
+        // font-weight: 300;
+        cursor: pointer;
+
+        &:hover{
           font-weight: bold;
         }
       }
