--- a/src/components/portfolioList/portfolioList.scss
+++ b/src/components/portfolioList/portfolioList.scss
@@ -1,11 +1,13 @@
 @import '../../global.scss';
 
-li{
-  font-size: 12px;
-  margin-right:50px;
+.portfolioList{
+  border: none;
+  font-size: 15px;
+  margin-right: 50px;
   padding: 7px;
   border-radius: 10px;
   cursor: pointer;
+
 
   &.active{
     background-color: $mainColor;
