--- a/src/components/porfolio/portfolio.scss
+++ b/src/components/porfolio/portfolio.scss
@@ -23,10 +23,12 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+    padding: 10px;
+    margin: 10px;
 
     .item{
-      width: 220px;
-      height: 150px;
+      width: 250px;
+      height: 160px;
       border-radius: 20px;
       border: 1px solid rgb(240, 239, 239);
       margin: 10px 20px;
@@ -43,11 +45,14 @@
         font-size: 20px;
       }
 
-      img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: 1;
+      a{
+        img{
+          // margin: 20px;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          z-index: 1;
+        }
       }
 
       &:hover{
